--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
+    <h1>Hello World</h1>
 <script src="js/jquery.min.js"></script>
 <script src="js/common.js"></script>
 </body>
