--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Swordros</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.min.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-    
-    <h1>Hello World</h1>
+<div class="header"></div>
+<div class="wrapper">
+    <div class="row" id="SwordrosShow">
+        <div class="col-md-4 swordrosBox">
+            <img src="images/swordros.png">
+        </div>
+        <div class="col-md-8 swordrosDes">2</div>
+    </div>
+
+</div>
+<div class="footer"></div>
 <script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/common.js"></script>
 </body>
 </html>
