--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
     <![endif]-->
 </head>
 <body>
-<div class="header"></div>
-<div class="wrapper">
-    <div class="row" id="SwordrosShow">
-        <div class="col-md-4 swordrosBox">
-            <img src="images/swordros.png">
-        </div>
-        <div class="col-md-8 swordrosDes">2</div>
-    </div>
-
+<div class="header">
 </div>
-<div class="footer"></div>
+<div class="wrapper">
+    <div class="jianxin"></div>
+</div>
+<div class="footer">
+</div>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/common.js"></script>
